fix: Combine routers of each match status into match/application API
